# speaches

./: CHANGES_V1.md  Dockerfile  model_backends.yaml  pyproject.toml
.github/workflows/: docker-build-and-push.yaml
src/speaches/: backend_registry.py  config.py  dependencies.py  main.py  qwen_client.py  voice_registry.py
src/speaches/executors/: silero_vad_v5.py  vllm_tts.py
src/speaches/executors/shared/: base_model_manager.py  registry.py
src/speaches/realtime/: chat_utils.py  context.py  response_event_router.py  session.py
src/speaches/routers/: chat.py  misc.py  models.py  realtime_rtc.py  realtime_ws.py  speech.py  stt.py  voice_cloning.py
src/speaches/types/: chat.py
src/speaches/ui/tabs/: audio_chat.py  stt.py  tts.py
tests/: auth_test.py  conftest.py  realtime_api_test.py  test_backend_registry.py  test_chat_types.py  test_config.py  test_dependencies.py  test_qwen_client.py  test_routers_v1.py
